<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="endere_o">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>

</resources>
