<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/nomeTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/nomeEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/emailTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/enderecoTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endere_o" />

    <EditText
        android:id="@+id/enderecoEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/telefoneTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone" />

    <EditText
        android:id="@+id/telefoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <RatingBar
        android:id="@+id/notaRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/ButtonSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/cancelarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar" />

</LinearLayout>
</ScrollView>
